--- a/package.json
+++ b/package.json
@@ -69,11 +69,12 @@
     "input-otp": "1.4.1",
     "js-sha256": "latest",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
     "nanoid": "latest",
     "next": "15.2.4",
     "next-themes": "latest",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.6",
     "react": "^19",
     "react-day-picker": "9.8.0",
