feat: Correções de personalização de documentos e sistema de backup automático
- Corrigido problema de cores não aplicadas no preview de documentos
- Implementado aplicação correta de fontes personalizadas (título e texto)
- Corrigido sistema de backup automático com validação de integridade
- Adicionado suporte completo a personalização de documentos
- Melhorado sistema de configurações com atualização em tempo real
- Implementados testes de integridade para backup/restore
- Corrigidas validações de dados e estrutura do banco

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "js-sha256": "latest",
+    "jsdom": "^27.0.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
