--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
     "nanoid": "latest",
-    "next": "15.2.4",
+    "next": "^15.5.3",
     "next-themes": "latest",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.6",
